--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.18.3",
     "convict": "^4.4.1",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
     "morgan": "^1.9.1",
