--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pg": "^7.9.0",
     "reflect-metadata": "^0.1.13",
     "rotating-file-stream": "^1.4.0",
+    "typeorm": "^0.2.16",
     "typescript": "^3.4.2",
     "winston": "^3.2.1"
   },
