--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Seed project to build back-end services that scale",
   "main": "src/app.js",
   "scripts": {
+    "install:clean": "rm -rf node_modules && rm package-lock.json && npm install",
     "start": "tsc && node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
@@ -29,26 +30,26 @@
   },
   "homepage": "https://github.com/Blockost/backend-seed#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "convict": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
     "morgan": "^1.9.1",
-    "pg": "^7.9.0",
+    "pg": "^7.14.0",
     "reflect-metadata": "^0.1.13",
-    "rotating-file-stream": "^1.4.0",
-    "typeorm": "^0.2.16",
-    "typescript": "^3.4.2",
+    "rotating-file-stream": "^1.4.6",
+    "typeorm": "^0.2.20",
+    "typescript": "^3.7.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
-    "@types/cors": "^2.8.4",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.16.1",
-    "@types/morgan": "^1.7.35",
-    "@types/node": "^11.13.2"
+    "@types/express": "^4.17.2",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^11.15.2"
   }
 }
